<resources>

    <string name="app_name">Smart List</string>
    <string name="title_activity_user_list">UserLIstActivity</string>
    <string name="database_name">database</string>



    //putExtra keys------------------------------------------------*---putExtra keys
    <string name="user_data_model">currentUserDataModel</string>---*
    <string name="user_properties">currentUserProperties</string>--*
    //putExtra keys------------------------------------------------*
    <string name="wrong_login_or_pass">Пароль или логин введен не правильно, введите корректный пароль или сбросте старый и после сброса введите новый логин и пароль затем войдите снова</string>
    <string name="reset_was_done">Сброс прошел успешно. Запись с логином и паролем не найдена, введите логин и пароль, где логин это российский номер сотового телефона, а пароль должен содержать 8 или больше символов а так же иметь одну или больше прописную и заглавную букву.</string>
    <string name="entry_was_not_found">Запись с логином и паролем не найдена, введите логин и пароль, где логин это российский номер сотового телефона, а пароль должен содержать 8 или больше символов а так же иметь одну или больше прописную и заглавную букву.</string>
    <string name="entry_was_found">Запись с логином и паролем найдена. Введите логин и пароль хранящиеся в базе для входа или сбросте его и введите новый.</string>
    <string name="login">Введите логин</string>
    <string name="pass">Введите пароль</string>
    <string name="login_text_input">Логин</string>
    <string name="pass_text_input">Пароль</string>
    <string name="enter">Авторизоваться</string>
    <string name="reset">Сбросить пароль</string>
    <string name="system_message">SystemMessage</string>
    <string name="wron_login">Не правильный логин!</string>
    <string name="wron_pass">Не правильный пароль!</string>
    <string name="userImageFolder">userimagefolder</string>
    <string name="set_sensor">Добвьте датчик</string>
    <string name="set_sensor_number">Введите номер датчика</string>
    <string name="put_one">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="check_sensor">Проверка датчика</string>
    <string name="set_secret_code">Введите секретный код</string>
    <string name="saving_was_done">Сохранение успешно</string>
    <string name="internet_error">Включите доступ к интернету пожалуйста</string>
    <string name="wrong_secret_code">Неверный секретный код, попробуйте еще</string>
    <string name="wrong_sensor_number">Неверный номер сенсора, попробуйте еще</string>
    <string name="wrong_last_name">Неверная фамилия, попробуйте еще</string>
    <string name="sport_sw">Занимается спортом</string>
    <string name="sport_sw_not">Не занимается спортом</string>
    <string name="flowers_sw">Любит цветы</string>
    <string name="flowers_sw_not">Не любит цветы</string>
    <string name="mushrooms_sw">Собирает грибы</string>
    <string name="mushrooms_sw_not">Не собирает грибы</string>
    <string name="crazy_sw">Гламурное кисо</string>
    <string name="crazy_sw_not">Не гламурное кисо</string>
    <string name="sex_choice_msg_man">Прекрасный мужчина</string>
    <string name="sex_choice_msg_woman">Великолепная женщина</string>
    <string name="fustLogin">FastLogin</string>

    <string-array name="sex_choice">
        <item>Выберите пол</item>
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>
    <string-array name="delete_update_choice">
        <item></item>
        <item>Изменить</item>
        <item>Удалить</item>
    </string-array>
</resources>
